src/core-crm/objects/Marketing_Course_Application__c/Marketing_Course_Application__c.object-meta.xml
<CustomObject>
    <label>Marketing Course Application</label>
    <nameField>
        <displayFormat>MCA - {000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Course Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>