src/core-crm/objects/Marketing_Course_Application__c/fields/Admission_Period__c.field-meta.xml
<CustomField>
    <fullName>Admission_Period__c</fullName>
    <description>The period in the &apos;University Calendar&apos; which the student will commence study.</description>
    <label>Admission Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>