src/core-crm/objects/Marketing_Course_Application__c/fields/Admission_Status__c.field-meta.xml
<CustomField>
    <fullName>Admission_Status__c</fullName>
    <description>The status of the student&apos;s admission.</description>
    <label>Admission Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>