src/core-crm/objects/Marketing_Course_Application__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <description>Agency Email Address</description>
    <label>Agency Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>