src/core-crm/objects/Marketing_Course_Application__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <description>Agency name. An Agency is an organisation QUT has a relationship with assist international students with their QUT study applications.</description>
    <label>Agency Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>