src/core-crm/objects/Marketing_Course_Application__c/fields/App_Condition_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Condition_Verification_Status__c</fullName>
    <label>App Condition Verification Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>