src/core-crm/objects/Marketing_Course_Application__c/fields/Applicant_Id_and_Preference_Num__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id_and_Preference_Num__c</fullName>
    <formula>Applicant_Id__c  &amp; TEXT(Preference_Number__c)</formula>
    <label>Applicant Id and Preference Num</label>
    <type>Text</type>
</CustomField>