src/core-crm/objects/Marketing_Course_Application__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>Placeholder field to store the source systems application Id. Currently this field is not being provided by QTAC or SAMS - possibly is being provided by Studylink into the &apos;SL_QTAC_Id&apos; but will need to confirm.</description>
    <label>Application Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>