src/core-crm/objects/Marketing_Course_Application__c/fields/Application_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Date__c</fullName>
    <description>Effective date of the application status.</description>
    <label>Application Status Date</label>
    <type>Date</type>
</CustomField>