src/core-crm/objects/Marketing_Course_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Course Applications</relationshipLabel>
    <relationshipName>Marketing_Course_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>