src/core-crm/objects/Marketing_Course_Application__c/fields/Course_Campus__c.field-meta.xml
<CustomField>
    <fullName>Course_Campus__c</fullName>
    <description>Applicant&apos;s course campus.</description>
    <label>Course Campus</label>
    <length>80</length>
    <type>Text</type>
</CustomField>