src/core-crm/objects/Marketing_Course_Application__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>QUT Course Code.</description>
    <label>Course Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>