src/core-crm/objects/Marketing_Course_Application__c/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <description>This attribute comes from the QTAC File</description>
    <label>Course Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>