src/core-crm/objects/Marketing_Course_Application__c/fields/Course_Major__c.field-meta.xml
<CustomField>
    <fullName>Course_Major__c</fullName>
    <description>Applicant&apos;s course major.</description>
    <label>Course Major</label>
    <length>80</length>
    <type>Text</type>
</CustomField>