src/core-crm/objects/Marketing_Course_Application__c/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <description>The commencement date of the course.</description>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>