src/core-crm/objects/Marketing_Course_Application__c/fields/Course_URL__c.field-meta.xml
<CustomField>
    <fullName>Course_URL__c</fullName>
    <description>Applicant&apos;s course URL.</description>
    <label>Course URL</label>
    <type>Url</type>
</CustomField>