src/core-crm/objects/Marketing_Course_Application__c/fields/Environment_Responsibilities_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Environment_Responsibilities_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is an Home Environment Responsibilities applicant.</description>
    <label>Environment Responsibilities Applicant</label>
    <type>Checkbox</type>
</CustomField>