src/core-crm/objects/Marketing_Course_Application__c/fields/Financial_Hardship_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hardship_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is applying under financial hardship circumstances.</description>
    <label>Financial Hardship Applicant</label>
    <type>Checkbox</type>
</CustomField>