src/core-crm/objects/Marketing_Course_Application__c/fields/Has_Offer_Condition__c.field-meta.xml
<CustomField>
    <fullName>Has_Offer_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Offer Condition</label>
    <type>Checkbox</type>
</CustomField>