src/core-crm/objects/Marketing_Course_Application__c/fields/Home_Environment_Responsibilities_Applic__c.field-meta.xml
<CustomField>
    <fullName>Home_Environment_Responsibilities_Applic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if the applicant is an Home Environment Responsibilities applicant.</description>
    <label>Home Environment Responsibilities Applic</label>
    <type>Checkbox</type>
</CustomField>