src/core-crm/objects/Marketing_Course_Application__c/fields/Intake_Year__c.field-meta.xml
<CustomField>
    <fullName>Intake_Year__c</fullName>
    <description>The applicant&apos;s intake year.</description>
    <label>Intake Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>