src/core-crm/objects/Marketing_Course_Application__c/fields/Is_International_Student_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_International_Student_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is International Student Application</label>
    <type>Checkbox</type>
</CustomField>