src/core-crm/objects/Marketing_Course_Application__c/fields/isAgent_Assisted__c.field-meta.xml
<CustomField>
    <fullName>isAgent_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the applicant has been assisted by an agency in their application.</description>
    <label>is Agent Assisted</label>
    <type>Checkbox</type>
</CustomField>