src/core-crm/objects/Marketing_Course_Application__c/fields/IsPackaged_Offer__c.field-meta.xml
<CustomField>
    <fullName>IsPackaged_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a student has a packaged offer.</description>
    <label>Is Packaged Offer</label>
    <type>Checkbox</type>
</CustomField>