src/core-crm/objects/Marketing_Course_Application__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Course Applications</relationshipLabel>
    <relationshipName>Marketing_Course_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>