src/core-crm/objects/Marketing_Course_Application__c/fields/Offer_Exists__c.field-meta.xml
<CustomField>
    <fullName>Offer_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QTAC File attrubute</description>
    <label>Offer Exists</label>
    <type>Checkbox</type>
</CustomField>