src/core-crm/objects/Marketing_Course_Application__c/fields/Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status__c</fullName>
    <label>Offer Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>