src/core-crm/objects/Marketing_Course_Application__c/fields/Offer_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status_Date__c</fullName>
    <label>Offer Status Date</label>
    <type>DateTime</type>
</CustomField>