src/core-crm/objects/Marketing_Course_Application__c/fields/Pathway_Principal_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Pathway_Principal_Course_Code__c</fullName>
    <description>Pathway_Principal principal course code according to student&apos;s SAMS record</description>
    <label>Pathway Principal Course Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>