src/core-crm/objects/Marketing_Course_Application__c/fields/Previous_Enrolled_Student__c.field-meta.xml
<CustomField>
    <fullName>Previous_Enrolled_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the person has previously enrolled with QUT.</description>
    <label>Previous Enrolled Student</label>
    <type>Checkbox</type>
</CustomField>