src/core-crm/objects/Marketing_Course_Application__c/fields/QTAC_Id__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Id__c</fullName>
    <label>QTAC Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>