src/core-crm/objects/Marketing_Course_Application__c/fields/QTAC_Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Matching_Criteria__c</fullName>
    <description>QTAC matching criteria</description>
    <formula>Application_Source__c + Applicant_Id__c  + TEXT(Preference_Number__c)</formula>
    <label>QTAC Matching Criteria</label>
    <type>Text</type>
</CustomField>