src/core-crm/objects/Marketing_Course_Application__c/fields/QTAC_Offer_Round__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Offer_Round__c</fullName>
    <description>Defines the offer round for QTAC applicants by month.</description>
    <label>QTAC Offer Round</label>
    <length>20</length>
    <type>Text</type>
</CustomField>