src/core-crm/objects/Marketing_Course_Application__c/fields/SAMS_Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>SAMS_Matching_Criteria__c</fullName>
    <description>SAMS matching criteria</description>
    <formula>Application_Source__c + QUT_Student_ID__c + Admission_Period__c + Course_Code__c + TEXT(Admission_Year__c)</formula>
    <label>SAMS Matching Criteria</label>
    <type>Text</type>
</CustomField>