src/core-crm/objects/Marketing_Course_Application__c/fields/Scholarship_Name__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Name__c</fullName>
    <description>The name of the student&apos;s scholarship (if applicable)</description>
    <label>Scholarship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>