src/core-crm/objects/Marketing_Course_Application__c/fields/Scholarship_Status__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Status__c</fullName>
    <description>Indicates if an applicant has a scholarship as a part of their offer or application.</description>
    <label>Scholarship Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>