src/core-crm/objects/Marketing_Course_Application__c/fields/Studylink_Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Studylink_Matching_Criteria__c</fullName>
    <description>Studylink matching criteria</description>
    <formula>Application_Source__c + Application_Id__c + Applicant_Id__c</formula>
    <label>Studylink Matching Criteria</label>
    <type>Text</type>
</CustomField>