src/core-crm/objects/Marketing_Course_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Date application was submitted.</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>